--- a/Labs/Lab2/Lab2_Max_Shuford.ipynb
+++ b/Labs/Lab2/Lab2_Max_Shuford.ipynb
@@ -188,16 +188,16 @@
     "## clean our titles\n",
     "import re\n",
     "\n",
-    "# strip edges\n",
+    "# 1) strip BOM/edges\n",
     "title = [t.lstrip('\\ufeff').strip() for t in title]\n",
     "\n",
-    "# if there’s any ')' before the real name, drop everything up to and including that ')'\n",
+    "# 2) if there’s any ')' before the real name, drop everything up to and including that ')'\n",
     "title = [re.sub(r'^[^)]*\\)', '', t) for t in title]\n",
     "\n",
-    "# 3) now remove any leftover leading parentheses or spaces\n",
+    "# 3) now remove any leftover leading parentheses/spaces (this fixes the '()Rank' case)\n",
     "title = [re.sub(r'^[()\\s]+', '', t) for t in title]\n",
     "\n",
-    "# clean the rest and normalize spacing\n",
+    "# 4) clean the rest and normalize spacing\n",
     "title = [re.sub(r'[^A-Za-z()\\s]+', '', t) for t in title]\n",
     "title = [re.sub(r'\\s+', ' ', t).strip() for t in title]\n",
     "\n",
@@ -830,6 +830,8 @@
     "        else:\n",
     "            ##print(line)\n",
     "            current_data.append(line.strip())\n",
+    "        # Please watch the tutorial and fill the code\n",
+    "        # Your code\n",
     "\n",
     "##print(result)\n",
     "txtdf = pd.DataFrame(result)\n",
@@ -1560,7 +1562,6 @@
     }
    ],
    "source": [
-    "# freak out if this doesnt work\n",
     "Results_Combine.loc[Results_Combine[\"Metric\"]==\"Top revenue 1995-1998 (company)\", \"Value\"] = top_rev_company\n",
     "Results_Combine.loc[Results_Combine[\"Metric\"]==\"Top revenue 1995-1998 (sum)\",     \"Value\"] = top_rev_value_m\n",
     "Results_Combine.loc[Results_Combine[\"Metric\"]==\"Top profit 1995-1998 (company)\",  \"Value\"] = top_profit_company\n",
